--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ yfinance>=0.2.0
 requests>=2.28.0
 python-dotenv>=0.19.0
 pathlib2>=2.3.0
+numpy>=1.21.0
+scikit-learn>=1.0.0
+xgboost>=1.6.0
+joblib>=1.1.0
